# python-fastapi-get-started

./: README.md  main.py  pyproject.toml  requirements.txt  serve.ps1  serve.sh  vercel.json
api/: index.py
